--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -232,3 +232,7 @@ app-show-members-of-channel{
 :host ::ng-deep app-show-members-of-channel input, :host ::ng-deep app-show-members-of-channel form  {
     width: 100%;
 }
+
+.error{
+    @include nunito(400, 16px, rgb(255, 67, 56));
+}
