--- a/src/app/main-content/thread/thread-header/thread-header.component.html
+++ b/src/app/main-content/thread/thread-header/thread-header.component.html
@@ -2,7 +2,7 @@
     <div class="thread-header-container">
         <h3>Thread</h3>
         <mat-icon class="hashtag">tag</mat-icon>
-        <p class="thread-channel-name">{{auth.currentChannelData.title}}</p>
+        <p class="thread-channel-name"> {{(this.auth.currentChannelData$ | async)?.title || auth.currentChannelData.title}}</p>
     </div>
 
     <button (click)="closeThread()"><mat-icon>close</mat-icon></button>
