--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -14,7 +14,7 @@
   ></app-images-preview>
 
   <div class="message-field-container">
-    <textarea  [attr.placeholder]="getPlaceholder()" [(ngModel)]="messageField" (input)="onInput($event)" (keydown)="checkEnterKey($event)"></textarea>
+    <textarea #messageInput [attr.placeholder]="getPlaceholder()" [(ngModel)]="messageField" (input)="onInput($event)" (keydown)="checkEnterKey($event)"></textarea>
 
     <div class="message-options-container">
 
