add a lock-screen to animations

--- a/src/app/shared/info-banner/info-banner.component.html
+++ b/src/app/shared/info-banner/info-banner.component.html
@@ -1,4 +1,9 @@
-
+<div class="lockscreen">
+    <div class='animation-box'>
+        <span [innerHTML]="text"></span>
+        <div class="animation-circle"></div>
+    </div>
+</div>
 <div class="banner">
     <div class="content">
         @if(icon){<mat-icon [innerHTML]="icon"></mat-icon>}
