scroll shadow for contact- and channel list in devspace

--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -26,9 +26,9 @@ mat-icon{
 .titleContainer{
     @include dFlex(space-between, center);
     width: 100%;
-    @include respond-to-maxWidth('smallMedium'){
-    display: none;
-    }
+    // @include respond-to-maxWidth('smallMedium'){
+    // display: none;
+    // }
 }
 
 .box {
