--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -1,5 +1,17 @@
 @import '../../../mixin.scss';
 
+
+hr {
+    width: 100%;
+    height: 1px;
+    margin-top: -8px;
+    margin-bottom: 12px;
+    border: none;
+    background-color: var(--text-black);
+    opacity: 0.25;
+}
+
+
 .serverNav {
     @include heightWidth($w: 100%, $h: 100%);
     background-color: var(--secundary-bg);
@@ -8,10 +20,12 @@
     flex: auto;
     display: flex;
     flex-direction: column;
-    @include respond-to-maxWidth(large){
+
+    @include respond-to-maxWidth(large) {
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
     }
+
     @include respond-to-maxWidth(small) {
         width: 100%;
         max-width: 100%;
@@ -27,12 +41,15 @@
     color: var(--text-black);
     display: flex;
     flex-direction: column;
+
     @include respond-to-maxWidth('XL') {
         @include padding(32px, 20px, 32px, 20px);
     }
+
     @include respond-to-minWidth(large) {
-        min-width: unset ;
+        min-width: unset;
     }
+
     @include respond-to-maxWidth(large) {
         max-height: 100%;
         position: absolute;
@@ -40,21 +57,26 @@
         left: 0;
         bottom: 20px;
         z-index: 2;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        border-radius: 30px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        border-radius: 30px;
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
         padding-left: 56px;
     }
+
     @include respond-to-maxWidth(medium) {
         bottom: 20px;
     }
+
     @include respond-to-minWidth(small) {
         z-index: 5;
         min-width: 327px;
     }
+
     @include respond-to-minWidth(large) {
-        min-width: unset ;
+        min-width: unset;
     }
+
     @include respond-to-maxWidth(small) {
         @include padding(24px, 16px, 24px, 16px);
         width: 100%;
@@ -66,7 +88,7 @@
         bottom: 0;
         z-index: 3;
         border-radius: 0px;
-        box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px !important;        
+        box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px !important;
     }
 }
 
@@ -94,15 +116,17 @@
     transition: color 0.125s ease-in-out;
     align-items: center;
     box-sizing: border-box;
+
     svg {
-        transition: color 0.125s ease-in-out, stroke  0.125s ease-in-out;
+        transition: color 0.125s ease-in-out, stroke 0.125s ease-in-out;
 
         path,
         rect {
             stroke: var(--text-black);
-            transition: color 0.125s ease-in-out, stroke  0.125s ease-in-out;
+            transition: color 0.125s ease-in-out, stroke 0.125s ease-in-out;
         }
     }
+
     &:hover {
         cursor: pointer;
         color: var(--purple-2);
@@ -115,18 +139,21 @@
             }
         }
     }
-    @include respond-to-maxWidth('smallMedium'){
+
+    @include respond-to-maxWidth('smallMedium') {
         padding: 8px 26px 8px 26px;
         bottom: 25vh;
     }
-    @include respond-to-maxWidth(small){
+
+    @include respond-to-maxWidth(small) {
         display: none;
     }
 }
 
 .titleRow {
     display: none;
-    @include respond-to-minWidth(small){
+
+    @include respond-to-minWidth(small) {
         @include dFlex($jc: space-between);
         margin-bottom: 25px;
     }
@@ -141,17 +168,18 @@
 h2 {
     @include nunito(700, 24px, var(--text-black));
     margin: 0px;
-    @include respond-to-maxWidth('XL'){
+
+    @include respond-to-maxWidth('XL') {
         font-size: 20px;
     }
 }
 
-  .mobileWriteAMessageButton{
+.mobileWriteAMessageButton {
     position: absolute;
     right: 16px;
     bottom: 32px;
     outline: none;
-    border: 0px solid ;
+    border: 0px solid;
     z-index: 10;
     background-color: #444DF2;
     @include padding(18px, 20px, 18px, 20px);
@@ -159,48 +187,53 @@ h2 {
     box-sizing: border-box;
     border-radius: 100px;
     transition: background-color 0.125s ease-in-out;
+
     &:hover {
         background-color: #535AF1;
         cursor: pointer;
     }
-    @include respond-to-minWidth(small){
+
+    @include respond-to-minWidth(small) {
         display: none;
     }
-    mat-icon{
+
+    mat-icon {
         color: white;
     }
-  }
+}
 
 
-app-channel-list{
+app-channel-list {
     display: flex;
     flex-direction: column;
     overflow: hidden;
     max-height: 100%;
 }
 
-app-contact-list{
+app-contact-list {
     display: flex;
     flex-direction: column;
     max-height: 100%;
     overflow: hidden;
 }
 
-.min-height-160px{
+.min-height-160px {
     min-height: 160px;
 }
 
-.stretch{
+.stretch {
     max-height: 100%;
 }
 
-.writeMessageButton{
+.writeMessageButton {
     @include dFlex(center, center);
     transition: background-color 0.125s ease-in-out;
-    mat-icon{
+
+    mat-icon {
         color: var(--text-black);
     }
-    &:hover{
+
+    &:hover {
         background-color: var(--primary-bg);
     }
 }
@@ -219,12 +252,15 @@ app-contact-list{
     display: flex;
     gap: 10px;
     transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
+
     .material-icons {
         transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
     }
+
     &:hover {
         color: var(--purple-1);
         cursor: pointer;
+
         .material-icons {
             transform: scale(1.1);
             color: var(--purple-1);
@@ -232,5 +268,3 @@ app-contact-list{
         }
     }
 }
-
-
